--- a/src/Pages/Movie/Movie.css
+++ b/src/Pages/Movie/Movie.css
@@ -1,3 +1,66 @@
 .movie {
   background: #06121e;
 }
+p.desc {
+  font-size: 1.4rem;
+  padding-top: 10px;
+}
+.video-main {
+  width: 10320px;
+  height: 605.433px;
+  position: relative;
+  overflow: hidden;
+}
+.video-main iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 70%;
+}
+.video-main .content {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+}
+@media (max-width: 768px) {
+  .video-main .content h2 {
+    font-size: 1.5rem;
+  }
+  .video-main iframe {
+    height: 70%;
+  }
+}
+@media (max-width: 576px) {
+  .video-main .content h2 {
+    font-size: 1rem;
+  }
+  .video-main {
+    height: 400px;
+  }
+  .video-main iframe {
+    height: 70%;
+  }
+}
+@media (max-width: 320px) {
+  .video-main .content h2 {
+    font-size: 0.6rem;
+  }
+  .video-main {
+    height: 300px;
+  }
+  .video-main iframe {
+    height: 70%;
+  }
+  p.desc {
+    font-size: 0.5rem;
+  }
+}
+.aspect-ratio-videolist {
+  aspect-ratio: 244 / 159;
+  margin-top: 21px;
+}
+/* .responsive-iframe {
+  width: 1032px;
+  height: 556.433px;
+} */
