--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -61,3 +61,9 @@
 .phimhot .overlay .price {
   color: red;
 }
+.home {
+  background: url(../../assets/img/1336451.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
