--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,6 +1,3 @@
-.custom-bg {
-  background: #8ec5fc;
-}
 .offcanvas {
   transition: transform 0.5s ease-in-out;
 }
@@ -29,4 +26,7 @@
 }
 .dropdown:hover .dropdown-menu {
   display: block;
+}
+.navbar-toggler .navbar-toggler-icon {
+  color: white; /* Thiết lập màu trắng cho icon */
 }
