--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -2,7 +2,7 @@
   aspect-ratio: 1440 / 600;
 }
 .aspect-ratio-hot {
-  aspect-ratio: 356 / 180;
+  aspect-ratio: 190 / 180;
 }
 .aspect-ratio-bannerQc {
   aspect-ratio: 1440 / 315;
@@ -18,15 +18,26 @@
   .title {
     font-size: 0.75rem;
   }
+  .title-1 {
+    font-size: 1.5rem !important;
+  }
+  .home p.desc {
+    font-size: 0.9rem !important;
+  }
+  .home .btn {
+    font-size: 0.7rem !important;
+  }
   .phimhot .overlay {
-    font-size: 0.35rem;
-    gap: -30px;
+    font-size: 0.35rem !important;
+    gap: -30px !important;
   }
   .phimhot .overlay .btn {
-    font-size: 0.3rem;
+    font-size: 0.3rem !important;
+    padding: 3px 6px;
+    margin-left: 5px;
   }
   .phimhot .overlay p {
-    margin-bottom: 5px;
+    margin-bottom: 5px !important;
   }
 }
 
@@ -61,9 +72,14 @@
 .phimhot .overlay .price {
   color: red;
 }
-.home {
-  background: url(../../assets/img/1336451.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
+
+.home .content-new {
+  width: 300px;
+}
+.home .btn {
+  border: 1px solid white;
+}
+.home .btn:hover {
+  background-color: rgb(77, 101, 25);
+  opacity: 0.5;
 }
